@@ -4,6 +4,7 @@ ChangeLog for Matrix Brandy - as forked from Sourceforge after V1.20.1
 * V1.21.20
 - Improved CIRCLE FILL and ELLIPSE FILL routines.
 - Added -v CLI option - thanks TheBrokenRail @ Github.
+- Reworked graphics window clipping, as it was completely broken.
 
 * V1.21.19
 - Hopefully fixed the spurious cursor remnants.
